--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+body {
+    background-color: #a164df;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.btn {
+    background-color: #663399;
+    color: white;
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+ 
